<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divide" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/dialog_gender_title"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divide" />

    <LinearLayout
        android:id="@+id/btn_male"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_sex_male" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/sex_male"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color_male"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/divide_view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divide" />

    <LinearLayout
        android:id="@+id/btn_female"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_sex_female" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/sex_female"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color_female"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>