<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/CustomToolBar">

        <TextView
            style="@style/CustomToolbarTitleView"
            android:text="@string/title_compelete_surprise" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_order_success"
                android:layout_width="fill_parent"
                android:layout_height="49dp"
                android:background="#e6f1db"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_activity_introduction_succeed_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:gravity="center"
                    android:text="@string/confirm_location_success"
                    android:textColor="#67b801"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="31dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_activity_introduction_site_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/confirm_location_address"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="15dp"
                android:background="@color/divide" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingTop="8dp">


                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="@color/divide" />

            <LinearLayout
                android:id="@+id/layout_activity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="@color/divide" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="31dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_activity_introduction_delivery_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/confirm_location_product"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="15dp"
                android:background="@color/divide" />


            <TextView
                android:id="@+id/txt_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="21dp"
                android:alpha="0.8"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/img_product"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>